--- a/src/scss/_components/points/_calculate.scss
+++ b/src/scss/_components/points/_calculate.scss
@@ -3,11 +3,18 @@
 .calculate {
   padding-top: 82px;
   padding-bottom: 32px;
+  @include adaptive(767) {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
 
   &__wrapper {
     &-0 {
       position: relative;
       margin-bottom: 88px;
+      @include adaptive(767) {
+        margin-bottom: 75px;
+      }
 
       .c-grid {
         z-index: 2;
@@ -16,39 +23,83 @@
 
       .calculate__desc {
         max-width: 476px;
+        @include adaptive(767) {
+          max-width: 100%;
+        }
       }
     }
 
     &-1 {
       margin-bottom: 66px;
+      @include adaptive(767) {
+        margin-bottom: 75px;
+      }
 
       .calculate__desc {
         max-width: 496px;
+        @include adaptive(767) {
+          max-width: 100%;
+        }
+      }
+
+      .calculate__row {
+        @include adaptive(991) {
+          align-items: center;
+        }
+        @include adaptive(767) {
+
+          img {
+            margin-left: -15px;
+            margin-bottom: 30px;
+          }
+        }
       }
 
       .calculate__row-right {
         padding-top: 18px;
         padding-left: 14px;
+        @include adaptive(767) {
+          padding: 0;
+        }
       }
 
       .calculate__title {
         padding-bottom: 14px;
+        @include adaptive(767) {
+          padding-bottom: 9px;
+        }
       }
     }
 
     &-2 {
       .calculate__desc {
         max-width: 479px;
+        @include adaptive(767) {
+          max-width: 100%;
+        }
+      }
+
+      .calculate__row {
+        @include adaptive(767) {
+          flex-direction: column-reverse;
+        }
       }
 
       .calculate__row-left {
         padding-top: 62px;
+        @include adaptive(767) {
+          padding-top: 0;
+        }
       }
 
       .calculate__row-right {
         display: flex;
         justify-content: center;
         padding-left: 29px;
+        @include adaptive(767) {
+          padding-left: 0;
+          padding-bottom: 30px;
+        }
       }
     }
   }
@@ -61,6 +112,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    @include adaptive(767) {
+      position: static;
+    }
 
     &-left,
     &-right {
@@ -68,10 +122,21 @@
       height: 100%;
     }
 
+    &-left {
+      @include adaptive(767) {
+        display: none;
+      }
+    }
+
     &-right {
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      @include adaptive(767) {
+        width: 90%;
+        margin-bottom: 30px;
+        margin-left: auto;
+      }
 
       img {
         display: block;
@@ -84,10 +149,16 @@
 
   &__row {
     display: flex;
+    @include adaptive(767) {
+      flex-wrap: wrap;
+    }
 
     &-left,
     &-right {
       width: 50%;
+      @include adaptive(767) {
+        width: 100%;
+      }
 
       img {
         display: block;
@@ -99,11 +170,11 @@
 
   &__title {
     padding-bottom: 9px;
-    font-size: 32px;
     font-weight: bold;
     line-height: 1.25;
     letter-spacing: -0.7px;
     color: #4a4a4a;
+    @include fluid(font-size, 320px, 1440px, 26px, 32px);
   }
 
   &__desc {
@@ -112,6 +183,9 @@
     font-weight: 300;
     line-height: 1.35;
     color: #4a4a4a;
+    @include adaptive(991) {
+      font-size: 16px;
+    }
 
     &--pb {
       padding-bottom: 24px;
